Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30732

wsrep_store_key_val_for_row() may invoke memcpy() on nullptr

    XMLWordPrintable

Details

    • Not for ES Release Notes
    • Q4/2025 Galera Maintenance, Q4/2025 Galera Development

    Description

      SET GLOBAL sql_mode=0;
      SET sql_mode=DEFAULT;
      CREATE TABLE t (c INT,c2 BLOB NOT NULL,KEY k2 (c2 (1),c)) DEFAULT CHARSET=latin1 ROW_FORMAT=COMPACT;
      INSERT INTO t (c) VALUES (1),(1),(1),(1),(1);
      

      Leads to

      10.10.4 6f6fa3bec2decb26598bce33d43594aabb25b201 (Optimized, UBASAN)

      /test/mtest/10.10_opt_san/storage/innobase/handler/ha_innodb.cc:6907:10: runtime error: null pointer passed as argument 2, which is declared to never be null
      

      Setup

      Compiled with GCC 9.4.0
        -DWITH_ASAN=ON -DWITH_ASAN_SCOPE=ON -DWITH_UBSAN=ON -DWSREP_LIB_WITH_ASAN=ON -DCMAKE_CXX_FLAGS=-static-libasan
      

      Attachments

        Activity

          People

            janlindstrom Jan Lindström
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 3h Original Estimate - 3h
                3h
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d 7.25h
                1d 7.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.